--- a/kinderlend.html
+++ b/kinderlend.html
@@ -1,152 +1,151 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html style="height:100%;"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-<link type="text/css" rel="stylesheet" href="main.css">
-<link rel="fontdef" src="Teslics.ttf">
-<link href="css.css" rel="stylesheet" type="text/css">
- <style>
-   @font-face {
-    font-family: Teslic`s Document Cyr; /* Имя шрифта */
-    local("Scriptorama"),
-    url(Teslics.ttf) format("truetype");   /* Путь к файлу со шрифтом */
-   }
-	html, body, document
-	{
-    font-family:'Neucha',Verdana,Tahoma;
-    margin:0px;
-	min-height:100%;
-	height:100%;
-	}
-	.kinderFont {font-family: 'Neucha', cursive;font-weight:bold;}
-	.menuLeftMain {font-family: 'Neucha', cursive;color: #383837; font-weight:bold;text-decoration:none;line-height:28px;}
-    .menuLeftSpec {font-family: 'Neucha', cursive;color: #575757; font-weight:bold;text-decoration:none;}
-    .menuLeftMainSelected {font-family: 'Neucha', cursive; color: #686868; font-weight:bold; text-shadow: 2px 2px 3px #ffffff;text-decoration:none;}
-	h1{font-family: 'Neucha', cursive;color: #383837; font-weight:bold;text-decoration:none;font-size:22px;}
-	.content{font-family:Verdana,Tahoma;font-size:11px;color: #383837;}
-	img{border:0;}
+<html style="height:100%;">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <link type="text/css" rel="stylesheet" href="main.css">
+  <link rel="fontdef" src="Teslics.ttf">
+  <link href="css.css" rel="stylesheet" type="text/css">
+  <style>
+    @font-face {
+      font-family: Teslic`s Document Cyr;
+      local("Scriptorama"),
+      url(Teslics.ttf) format("truetype"); }
+    html, body, document {
+      font-family:'Neucha',Verdana,Tahoma;
+      margin:0px;
+      min-height:100%;
+      height:100%; }
+    .kinderFont {
+      font-family: 'Neucha',
+      cursive;font-weight:bold;}
+    .menuLeftMain {
+      font-family: 'Neucha',
+      cursive;color: #383837;
+      font-weight:bold;
+      text-decoration:none;
+      line-height:28px;}
+    .menuLeftSpec {
+      font-family: 'Neucha', cursive;
+      color: #575757;
+      font-weight:bold;
+      text-decoration:none;}
+    .menuLeftMainSelected {
+      font-family: 'Neucha', cursive;
+      color: #686868;
+      font-weight:bold;
+      text-shadow: 2px 2px 3px #ffffff;
+      text-decoration:none;}
+    h1{
+      font-family: 'Neucha', cursive;
+      color: #383837;
+      font-weight:bold;
+      text-decoration:none;
+      font-size:22px;}
+    .content{
+      font-family:Verdana,Tahoma;
+      font-size:11px;
+      color: #383837;}
+     img{border:0;}
   </style>
 </head>
-
-
 <body style="height:100%;">
+  <div style="position:absolute;right:35px;top:10px;color:#929292;z-index:111;" class="kinderFont" align="right">
+    Одна из самых больших удач в жизни человека - Счастливое Детство
+  </div>
 
-<div style="position:absolute;right:35px;top:10px;color:#929292;z-index:111;" class="kinderFont" align="right">
-Одна из самых больших удач в жизни человека - Счастливое Детство
-</div>
+  <div style="position:absolute;right:40px;top:42px;font-size:15px;color:#929292;z-index:111;" class="kinderFont" align="right">
+    тел.:<b>
+       044 423 93 99<br/>
+       096 406 35 18<br/>
+       099 172 72 86<br/></b>
+  </div>
 
-<div style="position:absolute;right:40px;top:42px;font-size:15px;color:#929292;z-index:111;" class="kinderFont" align="right">
-тел.: <b>044 423 93 99<br>
-096 406 35 18<br>
-099 172 72 86<br>
-</b>
-</div>
+  <div style="position:absolute;bottom:0;top:21px;left:770px;z-index:110;">
+    <img src="img/top-teacher.png">
+  </div>
 
-<div style="position:absolute;bottom:0;top:21px;left:770px;z-index:110;">
-<img src="img/top-teacher.png">
-</div>
+  <div style="position:absolute;left:376px;top:125px;font-size:16px;color:#929292;z-index:111;" class="kinderFont" align="right">
+    <!-- BEGIN TOP MENU  -->
+    <a href="" class="menuLeftMainSelected">О нас</a> &nbsp;&nbsp;
+    <a href="" class="menuLeftMain">Детский сад</a>&nbsp;&nbsp;
+    <a href="" class="menuLeftMain">Центр развития</a> &nbsp;&nbsp;
+    <a href="" class="menuLeftMain">Контакты</a>
+    <!-- END   TOP MENU  -->
+  </div>
 
-<div style="position:absolute;left:376px;top:125px;font-size:16px;color:#929292;z-index:111;" class="kinderFont" align="right">
-<!-- BEGIN TOP MENU  -->
-<a href="" class="menuLeftMainSelected">О нас</a> &nbsp;&nbsp;
-<a href="" class="menuLeftMain">Детский сад</a>&nbsp;&nbsp;
-<a href="" class="menuLeftMain">Центр развития</a> &nbsp;&nbsp;
-<a href="" class="menuLeftMain">Контакты</a>
-<!-- END   TOP MENU  -->
-</div>
+  <div style="background-image:url('img/top-bg.jpg');height:158px;background-repeat: repeat-x;width:100%;position:absolute;left:0px;top:0px;">
+    <div style="background-image:url('img/logo-kinderland.jpg');width:376px;height:158px;background-repeat:repeat-none;position:relative;float:left;"><img src="1.gif" height="158px;" width="1px;"></div>
+    <div style="background-image:url('img/top-rainbow.jpg');width:377px;height:158px;background-repeat:repeat-none;position:relative;float:left;"><img src="1.gif" height="1px;" width="1px;"></div>
+  </div>
 
+  <div style="height:100%;width:100%;position:absolute;left:0px;top:158px;background-image:url('img/left-bg.jpg');background-repeat: repeat-y;">
+    <div style="background-image:url('img/left-bg.jpg');background-repeat: repeat-y;height:100%;width:176px;position:relative;float:left;" class="kinderFont">
+      <!-- BEGIN LEFT MENU  -->
+      <div style="padding-top:19px;padding-right:40px;" align="right">
+        <a href="" class="menuLeftMainSelected">О нас</a> <br>
+        <a href="" class="menuLeftMain">Детский сад</a><br>
+        <a href="" class="menuLeftMain">Центр развития</a> <br>
+        <a href="" class="menuLeftMain">Контакты</a><br>
+      </div>
+      <br>
+      <div style="padding-right:14px;" align="right">
+        <a href="" class="menuLeftSpec">Английский&nbsp;<img src="img/kinder-flower-1.png"></a><br>
+        <a href="" class="menuLeftSpec">Творчество&nbsp;<img src="img/kinder-flower-1.png"></a><br>
+        <a href="" class="menuLeftSpec">Музыка&nbsp;<img src="img/kinder-flower-1.png"></a><br>
+        <a href="" class="menuLeftSpec">Логика&nbsp;<img src="img/kinder-flower-1.png"></a><br>
+      </div>
+    </div>
 
-<div style="background-image:url('img/top-bg.jpg');height:158px;background-repeat: repeat-x;width:100%;position:absolute;left:0px;top:0px;">
-		<!--  div style="width:7536px;height:158px;position:relative;float:left;"-->
-		<div style="background-image:url('img/logo-kinderland.jpg');width:376px;height:158px;background-repeat:repeat-none;position:relative;float:left;"><img src="1.gif" height="158px;" width="1px;"></div>
-		<div style="background-image:url('img/top-rainbow.jpg');width:377px;height:158px;background-repeat:repeat-none;position:relative;float:left;"><img src="1.gif" height="1px;" width="1px;"></div>
+    <div style="position:relative;float:left;height:100%;width:60%;padding-left:36px;text-align:justify;" class="content">
+      <!-- BEGIN CONTENT  -->
+      <h1>О нас</h1>
+      <p>
+        <b>“Kinderland“</b> пропонує індивідуальний підхід до кожної дитини, де групи не більш <b>12 дітей та 2 педагоги</b>.
+        <br/>Головні предмети:
+      </p>
+      <div style="background-image:url('img/content-vertical-kids.jpg');background-repeat: repeat-y;text-align:justify;">
+        <ul style="line-height:20px;margin-left:35px;">
+          <li>читання та розвиток мовлення;</li>
+          <li>математика та логіка; </li>
+          <li>у світі музики; </li>
+          <li>образотворче мистецтво; </li>
+          <li>фізичне виховання та гімнастика; </li>
+          <li>хореографія; </li>
+          <li>акторське мистецтво на базі російських та українських казок (спектаклі, сценки, мюзікли ); </li>
+          <li>іноземна мова ( англійська, французька, німецька, у старших групах по бажанню ); </li>
+          <li>Я і Біблія; </li>
+          <li>вокал (логопедичний вокал) ейдетика (розвиток уваги та пам’яті) </li>
+        </ul>
+      </div>
+      <p></p>
+      <p>
+        <b>“Kinderland“</b>  виконує роботу дошкільної та позашкільної
+        освітньої діяльності , в якому забезпечується фізичний, розумовий і
+        психологічний розвиток, корекція фізичного та розумового
+        розвитку,загальний розвиток, виховання дітей від 1-го року.
+        Використовується базова програма Міністерства освіти і науки « Я у світі
+        »та використовує методики різних світових авторів.
+      </p>
+      <p>Ліцензія Серія АГ №576675.</p>
+      <p>Головним завданням є:</p>
+      <ul style="line-height:20px;margin-left:35px;">
+        <li>надання гідної освіти;</li>
+        <li>всебічний розвиток дитини; </li>
+        <li>розкриття її потенціалу; </li>
+        <li>виховання трьома мовами ( українська, англійська та російська); </li>
+      </ul>
+      <b>Тривалість перебування дитини у «Кіндерленді» залежить від того яку послугу обирають батьки.</b><br/>
+      <img src="img/content-age-principe-s.jpg">
+      <p></p>
+      <!-- END CONTENT  -->
+    </div>
+  </div>
 
-</div>
-
-
-<div style="height:100%;width:100%;position:absolute;left:0px;top:158px;background-image:url('img/left-bg.jpg');background-repeat: repeat-y;">
-
-
-<div style="background-image:url('img/left-bg.jpg');background-repeat: repeat-y;height:100%;width:176px;position:relative;float:left;" class="kinderFont">
-	<!-- BEGIN LEFT MENU  -->
-	<div style="padding-top:19px;padding-right:40px;" align="right">
-	<a href="" class="menuLeftMainSelected">О нас</a> <br>
-	<a href="" class="menuLeftMain">Детский сад</a><br>
-	<a href="" class="menuLeftMain">Центр развития</a> <br>
-	<a href="" class="menuLeftMain">Контакты</a><br>
-	</div>
-	<br>
-	<div style="padding-right:14px;" align="right">
-	<a href="" class="menuLeftSpec">Английский&nbsp;<img src="img/kinder-flower-1.png"></a><br>
-	<a href="" class="menuLeftSpec">Творчество&nbsp;<img src="img/kinder-flower-1.png"></a><br>
-	<a href="" class="menuLeftSpec">Музыка&nbsp;<img src="img/kinder-flower-1.png"></a><br>
-	<a href="" class="menuLeftSpec">Логика&nbsp;<img src="img/kinder-flower-1.png"></a><br>
-	</div>
-</div>
-
-
-<div style="position:relative;float:left;height:100%;width:60%;padding-left:36px;text-align:justify;" class="content">
-	<!-- BEGIN CONTENT  -->
-<h1>
-О нас
-</h1>
-<p>
-<b>“Kinderland“</b> пропонує індивідуальний підхід до кожної дитини, де групи не більш <b>12 дітей та 2 педагоги</b>.
-<br>Головні предмети:
-</p><div style="background-image:url('img/content-vertical-kids.jpg');background-repeat: repeat-y;text-align:justify;">
-<ul style="line-height:20px;margin-left:35px;">
-<li>читання та розвиток мовлення;</li>
-<li>математика та логіка; </li>
-<li>у світі музики; </li>
-<li>образотворче мистецтво; </li>
-<li>фізичне виховання та гімнастика; </li>
-<li>хореографія; </li>
-<li>акторське мистецтво на базі російських та українських казок (спектаклі, сценки, мюзікли ); </li>
-<li>іноземна мова ( англійська, французька, німецька, у старших групах по бажанню ); </li>
-<li>Я і Біблія; </li>
-<li>вокал (логопедичний вокал) ейдетика (розвиток уваги та пам’яті) </li>
- </ul>
- </div>
- <p></p>
- <p>
- <b>“Kinderland“</b>  виконує роботу дошкільної та позашкільної
-освітньої діяльності , в якому забезпечується фізичний, розумовий і
-психологічний розвиток, корекція фізичного та розумового
-розвитку,загальний розвиток, виховання дітей від 1-го року.
-Використовується базова програма Міністерства освіти і науки « Я у світі
- »та використовує методики різних світових авторів.
-</p>
-<p>
-Ліцензія Серія АГ №576675.
-</p>
-<p>
-Головним завданням є:
-</p><ul style="line-height:20px;margin-left:35px;">
-<li>надання гідної освіти;</li>
-<li>всебічний розвиток дитини; </li>
-<li>розкриття її потенціалу; </li>
-<li>виховання трьома мовами ( українська, англійська та російська); </li>
-
- </ul>
- <b>Тривалість перебування дитини у «Кіндерленді» залежить від того яку послугу обирають батьки.</b>
- <br>
-<img src="img/content-age-principe-s.jpg">
-
-<p></p>
-
-<!-- END CONTENT  -->
-
-</div>
-
-
-
-
-</div>
-
- <div style="background-image:url('img/bottom-bg-b.jpg');height:286px;background-repeat:repeat-x;width:100%; position: absolute; top: 100%;">
-		<div style="background-image:url('img/left-bottom.jpg');width:298px;height:286px;background-repeat:repeat-none;position:relative;left:0px;bottom:0px;">
-		<img src="1.gif" height="1px;" width="1px;">
-		</div>
-</div>
-
-</body></html>
+  <div style="background-image:url('img/bottom-bg-b.jpg');height:286px;background-repeat:repeat-x;width:100%; position: absolute; top: 100%;">
+    <div style="background-image:url('img/left-bottom.jpg');width:298px;height:286px;background-repeat:repeat-none;position:relative;left:0px;bottom:0px;">
+      <img src="1.gif" height="1px;" width="1px;">
+     </div>
+  </div>
+</body>
+</html>
