remmove ie styles

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
         </ul>
         <div class="info fright kinderFont">
           <p>Одна из самых больших удач в жизни человека - Счастливое Детство</p>
-          <p>тел.: 044 423 93 99</p>
-          <p>096 406 35 18</p>
-          <p>099 172 72 86</p>
+          тел.: 096 406 35 18<br/>
+          099 172 72 86
         </div>
       </div>        
       <div class="main">
