--- a/contacts.html
+++ b/contacts.html
@@ -103,11 +103,11 @@
                 <div class="for-flex cs">
                     <div class="address">
                         <div class="rubric"><i class="fa fa-map-marker"></i> Адрес</div>
-                        <div class="spage"> м. Київ, Святошинський район вул. Олевська, <br> ололлоло 5 (м. Академгородок)</div>
+                        <div class="spage"> м. Київ, Святошинський район <br/> вул. Олевська, 5 <br/> (м. Академгородок)</div>
                     </div>
                     <div class="telephone">
                         <div class="rubric"><i class="fa fa-phone"></i> Телефон</div>
-                        <div class="spage">(096)406-35-18 <br> (099)172-72-86</div>
+                        <div class="spage">(096)406-35-18 <br> <br> (099)172-72-86</div>
                     </div>
                     <div class="email">
                         <div class="rubric"><i class="fa fa-envelope-o"></i> Почта</div>
