--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 </div>
 
                 <p class="spage">
-                    В нашем саду есть тот баланс количество и качество занятий не в ущерб детству и здоровью детей. Изучение одних предметов не проходит в ущерб других. <br><br>
-                    Все обучение проходит на трех языках (украинский приоритетный, английский и русский) в игровой форме, а иностранный язык и в бытовом обиходе. <br><br> Ребенок получает соответствующие навыки способствующие всесторонней подготовке к реальной жизни и к дальнейшему обучению.
+                    В нашем саду есть тот баланс и количество занятий которые не идут в ущерб детству и здоровью детей. Изучение одних предметов не проходит в ущерб других. <br><br>
+                    Все обучение проходит на трех языках (украинский, английский и русский) в игровой форме. <br><br> Ребенок получает соответствующие навыки способствующие всесторонней подготовке к реальной жизни и к дальнейшему обучению.
                 </p>
 
                 <div class="rubric">Обучение направленно на главные 4 направления</div>
@@ -183,10 +183,10 @@
                 </div>
 
                 <p class="spage">
-                    Кабинетная система с профильными педагогами: за каждой группой закрепляется педагог и он ведет свой профильный предмет у всех групп, что позволяет подавать тот или иной предмет качественно и доступно. <br><br> Классы где проходят занятия разделены по зонам: рабочая зона, игровая, зона отдыха и развлечений, библиотека, хореографический и музыкальный зал, зона спорта, локальные зоны аудио и видео просмотра. <br><br> Главные 4 праздника в году, на 3х языках, в которых прослеживается четкий и сбалансированный смысл и с презентацией для родителей как открытый урок.
+                    Кабинетная система с профильными педагогами: за каждой группой закрепляется педагог и он ведет свой профильный предмет у всех групп, что позволяет подавать тот или иной предмет качественно и доступно. <br><br> Классы где проходят занятия разделены по зонам: рабочая зона, игровая, зона отдыха и развлечений, библиотека, хореографический и музыкальный зал, зона спорта, локальные зоны аудио и видео просмотра. <br><br> Мы проводим главные 4 праздника в году, на 3х языках, в которых прослеживается четкий и сбалансированный смысл и с презентацией для родителей как открытый урок.
                 </p>
 
-                <div class="rubric">Главные 5 праздников в году</div>
+                <div class="rubric">Главные 4 праздника в году</div>
                 <div class="wrap-cards">
                     <div class="container-x">
                         <div class="ticket">
