--- a/in-page-tea.html
+++ b/in-page-tea.html
@@ -5,7 +5,8 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
+  <meta name="description" content="Киндерленд цент развития ребенка">
+  <meta name="keywords" content="детский сад, частный детский сад, детский сад Киев, дошкольное образование ребенка, центр развития">
   <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
   <link rel="stylesheet" href="css/main.css">
 
@@ -163,5 +164,13 @@
        <!--footer end-->
     </div>
     <!--wrapper end-->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-34817801-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
