Adding meta data + Allow All Bots

--- a/develop_center.html
+++ b/develop_center.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="Центр развития ребенка Киндерленд - это качественные занятия с вашим малышом с английським языком, логопедом, веселая гимнастика, работа с детьми с особыми потребностями (аутистами)">
+  <meta name="keywords" content="центр развития ребенка Киндерленд, англиский с 8 месяцев, логопед">
+  <title>Центр развития ребенка Киндерленд | занятия с детьми от 8 месяцев | логоазбука </title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
