--- a/english.html
+++ b/english.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="В нашем центре обучают опытные преподаватели английского языка. Мы учим самых маленьких от 8 ми месяцев или помогаем школьникам с английским">
+  <meta name="keywords" content="английский язык в центре Киндерленд, репетитор по английскому для детей">
+  <title>Английский для детей Киев | английский для самых маленьких | иностранные языки для детей</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
