--- a/full.html
+++ b/full.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="Детский сад Киндерленд - это сад полного и короткого дня, мы обучаем изобразительному искуству, готовим детей к школе, у нас есть детский психолог и дефектолог, работаем с тяжелыми детьми">
+  <meta name="keywords" content="детский сад киндерленд, занятия, детские праздники">
+  <title>Детский сад Киндерленд | рассписание | предметы</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
