--- a/groups.html
+++ b/groups.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="Мы работаем в небольших группах и разделяем детей по направлениям, чтобы максимально эфективно использовать образовательный процес">
+  <meta name="keywords" content="группы Киндерленд, количество детей в детском саду">
+  <title>Группы в детском саду Киндерленд | Обучение в детском саду | Солнышки | Киндерята</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
