--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-  <meta name="description" content="Киндерленд цент развития ребенка">
-  <meta name="keywords" content="детский сад, частный детский сад, детский сад Киев, дошкольное образование ребенка, центр развития">
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="Центр развития ребенка Киндерленд - это качественное образование для ваших детей.
+Мы предлагаем подготовку к школе, проводим детские праздники, английский, кружки, развивающие занятия.
+Все что нужно для всестороннего развития вашего ребенка.">
+  <meta name="keywords" content="детский сад в киеве, центр развития ребенка, детский сад Святошино">
+  <title>Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
