--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="У нас подают сбалансированное питание для вашего ребенка">
+  <meta name="keywords" content="питание ребенка, меню Киндерленд">
+  <title>Меню Киндерленд</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
