--- a/metodica.html
+++ b/metodica.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="В центре развития Киндерленд мы используем собственные методити образования на базе Министерства Образования Украины. Качественное образование для ваших детей и квалифицированный персонал обеспечит легкое и эфективное обучение.">
+  <meta name="keywords" content="методики обучения детей">
+  <title>Методики обучения в центре развития ребенка Киндерленд</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
