--- a/regime.html
+++ b/regime.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="Мы работаем с 8.00 до 19.00 подстраиваясь под режим каждого ребенка">
+  <meta name="keywords" content="расписание Киндерленд, время занятий в детском саду">
+  <title>Распорядок дня в Киндерленде | Расписание в детском саду Киндерленд</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
