--- a/teachers.html
+++ b/teachers.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="В нашем центре работают только опытные и талантливые воспитатели">
+  <meta name="keywords" content="воспитатели Киндерленд">
+  <title>Воспитатели и педагоги центра развития ребенка Киндерленд</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
