--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,9 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-
-  <title>Киндерленд - центр развития ребенка | детский сад | частный детский сад.</title>
+  <meta name="description" content="Наш центр развития ребенка надодится в Святошинском районе, улица Олевская 5, в живописном микрорайоне возле соснового леса">
+  <meta name="keywords" content="адрес центр развития ребенка Киндерленд, контакты детский сад Киндерленд">
+  <title>Контакты центр развития ребенка Киндерленд | карта проезда | адрес| телефоны</title>
   <link rel="stylesheet" href="css/main.css">
 
   <!--Font Awesome Icons-->
