Removing sitemaps, changing sitemap html

--- a/sitemap.html
+++ b/sitemap.html
@@ -1,25 +1,44 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Sitemap</title>
+  <meta charset="UTF-8">
+
+  <!--Responsive WebDesign-->
+  <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+  <meta name="description" content="Наш центр развития ребенка надодится в Святошинском районе, улица Олевская 5, в живописном микрорайоне возле соснового леса">
+  <meta name="keywords" content="адрес центр развития ребенка Киндерленд, контакты детский сад Киндерленд">
+  <title>Контакты центр развития ребенка Киндерленд | карта проезда | адрес| телефоны</title>
+  <link rel="stylesheet" href="css/main.css">
+
+  <!--Font Awesome Icons-->
+  <link rel="stylesheet" href="fa/css/font-awesome.css">
+
+  <!--Google fonts-->
+  <link href='https://fonts.googleapis.com/css?family=Bonbon|Neucha' rel='stylesheet' type='text/css'>
+
+  <!--Favicon-->
+  <link rel="SHORTCUT ICON" href="img/lst.png" type="image/x-icon">
+
 </head>
 <body>
-<a href="http://kinderland.org.ua/">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br />Киндерленд центр развития ребенка
-<br /><br /><a href="http://kinderland.org.ua/full.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/develop_center.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/contacts.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/kindergarten.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/no-full.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/english.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/groups.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/regime.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/objects.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/metodica.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/teachers.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/tvorchestvo.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/menu.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br /><br /><a href="http://kinderland.org.ua/in-page-tea.html">Киндерленд - центр развития ребенка | детский сад | частный детский сад.</a>
-<br />Киндерленд центр развития ребенка
-<br /><br /></body>
+<div class="wrapper">
+<div class="content">
+<div id="cont">
+<h1>Киндерленд карта сайта</h1>
+<h3><a href="http://kinderland.org.ua">Homepage</a><h3>
+<a href="http://kinderland.org.ua/" title="Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.">Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.</a><
+<a href="http://kinderland.org.ua/index.html" title="Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.">Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.</a>
+<a href="http://kinderland.org.ua/full.html" title="Детский сад Киндерленд | рассписание | предметы">Детский сад Киндерленд | рассписание | предметы</a>
+<a href="http://kinderland.org.ua/develop_center.html" title="Центр развития ребенка Киндерленд | занятия с детьми от 8 месяцев | логоазбука ">Центр развития ребенка Киндерленд | занятия с детьми от 8 месяцев | логоазбука </a>
+<a href="http://kinderland.org.ua/contacts.html" title="Контакты центр развития ребенка Киндерленд | карта проезда | адрес| телефоны">Контакты центр развития ребенка Киндерленд | карта проезда | адрес| телефоны</a>
+<a href="http://kinderland.org.ua/english.html" title="Английский для детей Киев | английский для самых маленьких | иностранные языки для детей">Английский для детей Киев | английский для самых маленьких | иностранные языки для детей</a>
+<a href="http://kinderland.org.ua/groups.html" title="Группы в детском саду Киндерленд | Обучение в детском саду | Солнышки | Киндерята">Группы в детском саду Киндерленд | Обучение в детском саду | Солнышки | Киндерята</a>
+<a href="http://kinderland.org.ua/regime.html" title="Распорядок дня в Киндерленде | Расписание в детском саду Киндерленд">Распорядок дня в Киндерленде | Расписание в детском саду Киндерленд</a>
+<a href="http://kinderland.org.ua/metodica.html" title="Методики обучения в центре развития ребенка Киндерленд">Методики обучения в центре развития ребенка Киндерленд</a>
+<a href="http://kinderland.org.ua/teachers.html" title="Воспитатели и педагоги центра развития ребенка Киндерленд">Воспитатели и педагоги центра развития ребенка Киндерленд</a>
+<a href="http://kinderland.org.ua/menu.html" title="Меню Киндерленд">Меню Киндерленд</a>
+</div>
+</div>
+</div>
+</body>
 </html>
