--- a/tvorchestvo.html
+++ b/tvorchestvo.html
@@ -48,8 +48,9 @@
       <div class="info-header">
         Одна из самых больших удач в жизни человека - Счастливое Детство
         <div class="contacts">
-          тел: 096 406 35 18 <br>
-          099 172 72 86
+          Kievstar <a class="phones" href="tel:+380964063518">(096) 406-35-18</a><br/>
+          Vodafone <a class="phones" href="tel:+380991727286">(099) 172-72-86</a><br/>
+          Life     <a class="phones" href="tel:+380933670440">(093) 367-04-40</a>
         </div>
       </div>
         <!--btns for loc.-->
