Changing meta keywords

--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
   <meta name="description" content="Наш центр развития ребенка надодится в Святошинском районе, улица Олевская 5, в живописном микрорайоне возле соснового леса">
-  <meta name="keywords" content="адрес центр развития ребенка Киндерленд, контакты детский сад Киндерленд">
+  <meta name="keywords" content="адрес центр развития ребенка Киндерленд, контакты детский сад Киндерленд, детские сады киева на карте, адреса детские сады">
   <title>Контакты центр развития ребенка Киндерленд | карта проезда | адрес| телефоны</title>
   <link rel="stylesheet" href="css/main.css">
 
