--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-  <meta name="description" content="Центр развития ребенка Киндерленд - это качественное образование для ваших детей.
-Мы предлагаем подготовку к школе, проводим детские праздники, английский, кружки, развивающие занятия.
-Все что нужно для всестороннего развития вашего ребенка.">
-  <meta name="keywords" content="детский сад в киеве, центр развития ребенка, детский сад Святошино">
+  <meta name="description" content="Центр развития ребенка Киндерленд - это качественное образование для ваших детей. Лучший детский сад полного дня в Киеве. Мы предлагаем подготовку к школе, проводим детские праздники, английский, кружки, развивающие занятия. Все что нужно для всестороннего развития вашего ребенка.">
+  <meta name="keywords" content="детский сад в киеве, частный детский сад, центр развития ребенка, детский сад Святошино, лучшие детские сады, детские сады монтессори">
   <title>Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.</title>
   <link rel="stylesheet" href="css/main.css">
 
