Changed keywords, CSS, links

--- a/full.html
+++ b/full.html
@@ -44,6 +44,7 @@
           <li><a href="full.html" >Детский сад</a></li>
           <li><a href="develop_center.html" >Центр развития </a></li>
           <li><a href="contacts.html" >Контакты</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <div class="info-header">
@@ -95,6 +96,7 @@
           <li><a href="teachers.html" >Воспитатели</a></li>
           <!-- <li><a href="tvorchestvo.html" >Творчество</a></li> -->
           <li><a href="menu.html" >Меню</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <!--sidebar end-->
@@ -104,8 +106,8 @@
           <div class="full">
             <div class="rubric">Детский Сад</div>
             <p class="spage">
-               Сад полного  дня с Пн-Пт с 8:00-19:00: <br><br>
-               Сад короткого дня с Пн-Пт с 8:00-12:30: <br><br>
+               <a href="full.html" >Сад полного  дня</a> с Пн-Пт с 8:00-19:00: <br><br>
+               <a href="develop_center.html" >Сад короткого дня</a> с Пн-Пт с 8:00-12:30: <br><br>
 Завтрак и снек, 3-4 занятия в игровой форме сбалансированные по возрастной категории и психологическими особенностями, прогулка днем, обед, сон, полудник, свободное время, ужин, вечерняя прогулка или забавы в саду. <br><br>
               <table class="table">
                 <tr><td>8:00</td><td>прием деток</td></tr>
