--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
   <meta name="description" content="Центр развития ребенка Киндерленд - это качественное образование для ваших детей. Лучший детский сад полного дня в Киеве. Мы предлагаем подготовку к школе, проводим детские праздники, английский, кружки, развивающие занятия. Все что нужно для всестороннего развития вашего ребенка.">
-  <meta name="keywords" content="детский сад в киеве, частный детский сад, центр развития ребенка, детский сад Святошино, лучшие детские сады, детские сады монтессори">
+  <meta name="keywords" content="детский сад, детские сады киева, частный детский сад, центр развития ребенка, детский сад Святошино, лучшие детские сады, детские сады монтессори">
   <title>Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.</title>
   <link rel="stylesheet" href="css/main.css">
 
@@ -44,6 +44,7 @@
           <li><a href="full.html" >Детский сад</a></li>
           <li><a href="develop_center.html" >Центр развития </a></li>
           <li><a href="contacts.html" >Контакты</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <div class="info-header">
@@ -95,6 +96,7 @@
           <li><a href="teachers.html" >Воспитатели</a></li>
           <!-- <li><a href="tvorchestvo.html" >Творчество</a></li> -->
           <li><a href="menu.html" >Меню</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <!--sidebar end-->
@@ -104,7 +106,6 @@
         <div class="rubric">
           Авторская система работы сада «Киндерленд»
         </div>
-
                 <div class="wrap-cards">
                     <div class="container-x">
                         <!-- <div class="ticket">
@@ -143,9 +144,8 @@
 
                 <p class="spage">
                     В нашем саду есть тот баланс и количество занятий которые не идут в ущерб детству и здоровью детей. Изучение одних предметов не проходит в ущерб других. <br><br>
-                    Все обучение проходит на трех языках (украинский, английский и русский) в игровой форме. <br><br> Ребенок получает соответствующие навыки способствующие всесторонней подготовке к реальной жизни и к дальнейшему обучению.
+                    Все обучение проходит на трех языках (украинский, английский и русский) в игровой форме. <br><br> Ребенок получает соответствующие навыки способствующие всесторонней подготовке к реальной жизни и к дальнейшему обучению. <br><br> Вы вибираете оптимальный график посещений <a href="full.html" >Сад полного  дня</a> или же <a href="develop_center.html" >Сад короткого дня</a>
                 </p>
-
                 <div class="rubric">Обучение направленно на главные 4 направления</div>
 
                  <div class="wrap-cards">
