--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
   <meta name="description" content="У нас подают сбалансированное питание для вашего ребенка">
-  <meta name="keywords" content="питание ребенка, меню Киндерленд">
+  <meta name="keywords" content="меню детского сада, детский сад питание, меню Киндерленд">
   <title>Меню Киндерленд</title>
   <link rel="stylesheet" href="css/main.css">
 
@@ -44,6 +44,7 @@
           <li><a href="full.html" >Детский сад</a></li>
           <li><a href="develop_center.html" >Центр развития </a></li>
           <li><a href="contacts.html" >Контакты</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <div class="info-header">
@@ -77,9 +78,9 @@
         </label>
       <div class="sidebar">
          <input type="checkbox" id="checker">
-        <label for="checker" class="close">
-          <i class="fa fa-angle-double-left"></i>
-        </label>
+         <label for="checker" class="close">
+           <i class="fa fa-angle-double-left"></i>
+         </label>
         <ul>
           <li><a href="index.html">О нас</a></li>
           <!-- <li><a href="kindergarten.html" >Детский сад - Программа</a></li> -->
@@ -95,6 +96,7 @@
           <li><a href="teachers.html" >Воспитатели</a></li>
           <!-- <li><a href="tvorchestvo.html" >Творчество</a></li> -->
           <li><a href="menu.html" >Меню</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <!--sidebar end-->
@@ -116,7 +118,7 @@
         <div class="for-flex">
                     <img src="img/food1.png" class="a-x">
                     <div class="spage">
-                        В збалансованне питания входят: рыба, птица, мясо телятины, злаковые , овощи и фрукты, зелень. Экологически чистые продукты питания закупаются у фермеров. <br><br>
+                        В сбалансированное питание входят: рыба, птица, мясо телятины, злаковые , овощи и фрукты, зелень. Экологически чистые продукты питания закупаются у фермеров. <br><br>
                         Наше меню обеспечивает ребенка достаточным количеством калорий в день для физической и  психологической подвижной активности.
                         Размер нашей мебели соответствует возрасту и росту детей, эстетическое обучение детей пользования слововимы приборами.
                     </div>
