--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
   <!--Responsive WebDesign-->
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
   <meta name="description" content="Наш центр развития ребенка надодится в Святошинском районе, улица Олевская 5, в живописном микрорайоне возле соснового леса">
-  <meta name="keywords" content="адрес центр развития ребенка Киндерленд, контакты детский сад Киндерленд, детские сады киева на карте, адреса детские сады">
+  <meta name="keywords" content="детские сады киева на карте, адреса детские сады, адреса детских садов, детский сад контакты, адрес центр развития ребенка Киндерленд, контакты детский сад Киндерленд,">
   <title>Контакты центр развития ребенка Киндерленд | карта проезда | адрес| телефоны</title>
   <link rel="stylesheet" href="css/main.css">
 
@@ -44,6 +44,7 @@
           <li><a href="full.html" >Детский сад</a></li>
           <li><a href="develop_center.html" >Центр развития </a></li>
           <li><a href="contacts.html" >Контакты</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <div class="info-header">
@@ -95,6 +96,7 @@
           <li><a href="teachers.html" >Воспитатели</a></li>
           <!-- <li><a href="tvorchestvo.html" >Творчество</a></li> -->
           <li><a href="menu.html" >Меню</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <!--sidebar end-->
