--- a/objects.html
+++ b/objects.html
@@ -43,6 +43,7 @@
           <li><a href="full.html" >Детский сад</a></li>
           <li><a href="develop_center.html" >Центр развития </a></li>
           <li><a href="contacts.html" >Контакты</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <div class="info-header">
@@ -94,6 +95,7 @@
           <li><a href="teachers.html" >Воспитатели</a></li>
           <!-- <li><a href="tvorchestvo.html" >Творчество</a></li> -->
           <li><a href="menu.html" >Меню</a></li>
+          <li><a href="ceny.html" >Цены</a></li>
         </ul>
       </div>
       <!--sidebar end-->
