--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, inital-scale=1.0" />
   <meta name="description" content="Центр развития ребенка Киндерленд - это качественное образование для ваших детей. Лучший детский сад полного дня в Киеве. Мы предлагаем подготовку к школе, проводим детские праздники, английский, кружки, развивающие занятия. Все что нужно для всестороннего развития вашего ребенка.">
   <meta name="keywords" content="детский сад, детские сады киева, частный детский сад, центр развития ребенка, детский сад Святошино, лучшие детские сады, детские сады монтессори">
+  <meta name="yandex-verification" content="8316ce08debbc75a" />
   <title>Детский сад - Киев Святошино | Киндерленд частный детский сад английский | Дошкольное образование.</title>
   <link rel="stylesheet" href="css/main.css">
 
